--- a/layout/_partial/sidebar.ejs
+++ b/layout/_partial/sidebar.ejs
@@ -9,7 +9,7 @@
         <div class="mdui-list-item-content"><%= config.author %></div>
     </li>
         <li class="mdui-divider"></li>
-        <li class="mdui-list-item mdui-ripple" onclick="window.location.href='/'">
+        <li class="mdui-list-item mdui-ripple" onclick="location.href='<%= config.root %>'">
             <i class="mdui-list-item-icon mdui-icon material-icons">home</i>
             <div class="mdui-list-item-content"><%= __('sidebar.homepage') %></div>
         </li>
