--- a/layout/_partial/appbar.ejs
+++ b/layout/_partial/appbar.ejs
@@ -3,7 +3,9 @@
         <button class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#left-drawer', swipe: true}"><i class="mdui-icon material-icons">menu</i></button>
         <a class="mdui-typo-title"><%= config.title %></a>
         <div class="mdui-toolbar-spacer"></div>
-        <a class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">rss</i></a>
+        <% if(theme.url.rss) { %>
+            <a href="<%= config.root %><%= theme.url.rss %>" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">rss_feed</i></a>
+        <% } %>
         <a class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></a>
     </div>
 </div>
