--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -26,10 +26,52 @@
     %>
     <title><% if (title) { %><%= title + ' - ' %><% } %><%= config.title %></title>
 
+    <!-- Favicons -->
+    <link rel="icon shortcut" type="image/ico" href="<%= url_for(theme.head.favicon) %>">
+    <link rel="icon" href="<%= url_for(theme.head.high_res_favicon) %>">
+
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="description" itemprop="description" content="<% if(page.description) { %><%= page.description %><% } else if(page.excerpt){ %><%= strip_html(page.excerpt).replace(/^s*/, '').replace(/s*$/, '') %><% } else if (config.description){ %><%= config.description %><% } %>">
+    <meta name="keywords" content="<%= theme.head.keywords %><% if(page.tags && page.tags.each) { page.tags.each(function(tag) { %><%- ',' + tag.name %><% })} %>">
+    <meta name="theme-color" content="<%= theme.head.android_chrome_color %>">
+
+    <!-- WebAPP Icons -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="<%= config.title %>">
+    <meta name="msapplication-starturl" content="<%= config.url + url_for(page.path).replace('index.html', '') %>">
+    <meta name="msapplication-navbutton-color" content="<%= theme.head.android_chrome_color %>">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="<%= config.title %>">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" href="<%= url_for(theme.head.apple_touch_icon) %>">
+
+    <!-- RSS -->
+    <% if(theme.url.rss) { %>
+        <% if(config.feed.type == "atom"){ %>
+            <link rel=alternate type="application/atom+xml" href="<%= theme.url.rss || '#' %>">
+        <% } else if(config.feed.type == "rss2") { %>
+            <link rel=alternate type="application/rss+xml" href="<%= theme.url.rss || '#' %>">
+        <% } else { %>
+        <% } %>
+    <% } %>
+
+    <% if(theme.head.google.analytics_id) { %>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+            ga('create', '<%= theme.head.google.analytics_id %>', 'auto');ga('send', 'pageview');
+        </script>
+    <% } %>
+    <% if(theme.head.google.site_verification) { %>
+        <meta name="google-site-verification" content="<%= theme.head.site_verification.google %>" />
+    <% } %>
+
     <!-- MDUI 0.4.2 -->
     <% if(theme.mdui.url === 'local') { %>
-        <link type="text/css" href="/css/mdui.min.css" rel="stylesheet"/>
-        <script type="text/javascript" src="/js/mdui.min.js"></script>
+        <link type="text/css" href="<%= config.root %>css/mdui.min.css" rel="stylesheet"/>
+        <script type="text/javascript" src="<%= config.root %>js/mdui.min.js"></script>
     <% } else if(theme.mdui.url === 'cdnjs') { %>
         <%- css('https://cdnjs.cloudflare.com/ajax/libs/mdui/0.4.2/css/mdui.min.css') %>
         <%- js('https://cdnjs.cloudflare.com/ajax/libs/mdui/0.4.2/js/mdui.min.js') %>
@@ -49,4 +91,17 @@
         fb_admins: __('theme.head.og.fb_admins'),
         fb_app_id: __('theme.head.og.fb_app_id'),
     }) %>
+
+    <% if( (is_post()) ) { %>
+        <meta property="article:published_time" content="<%= page.date %>">
+        <meta property="article:modified_time" content="<%= page.updated %>">
+    <% } %>
+
+    <!-- Add canonical link for SEO -->
+    <% if( (page.current === 1) && (is_home()) ) { %>
+        <link rel="canonical" href="<%- config.url %>" />
+    <% } else { %>
+        <link rel="canonical" href="<%- config.url + url_for(path) %>" />
+    <% } %>
+
 </head>
