--- a/layout/_partial/appbar.ejs
+++ b/layout/_partial/appbar.ejs
@@ -12,7 +12,7 @@
     <% if(!is_home() && !is_archive()) { %>
     <div class="mdui-appbar mdui-shadow-0 mdui-appbar-fixed" mdui-headroom="{pinnedClass: 'm-unpinned', unpinnedClass: 'm-pinned'}" style="visibility: hidden; transition: background-color .3s;">
         <div class="mdui-toolbar m-toolbar-second" style="transition: all 0.5s linear;">
-            <button class="mdui-btn mdui-btn-icon" onclick="window.location.href='/'"><i class="mdui-icon material-icons">close</i></button>
+            <button class="mdui-btn mdui-btn-icon" onclick="window.location.href='<%= config.url %>'"><i class="mdui-icon material-icons">close</i></button>
             <a class="mdui-typo-title"><%= page.title %></a>
             <div class="mdui-toolbar-spacer"></div>
             <!-- <a class="mdui-btn mdui-hidden-sm-down"><i class="mdui-icon mdui-icon-left material-icons">access_time</i>11 mins remaining</a>
