fix(head): add if condition to avoid errors
version: 190715 > 190716

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -26,16 +26,20 @@
     %>
     <title><% if (title) { %><%= title + ' - ' %><% } %><%= config.title %></title>
 
-    <!-- Favicons -->
-    <link rel="icon shortcut" type="image/ico" href="<%= url_for(theme.head.favicon) %>">
-    <link rel="icon" href="<%= url_for(theme.head.high_res_favicon) %>">
+    <!-- Icons -->
+    <% if(theme.head.favicon) { %>
+        <link rel="icon shortcut" type="image/ico" href="<%= url_for(theme.head.favicon) %>">
+    <% } if(theme.head.high_res_favicon) { %>
+        <link rel="icon" href="<%= url_for(theme.head.high_res_favicon) %>">
+    <% } if(theme.head.apple_touch_icon) { %>
+        <link rel="apple-touch-icon" href="<%= url_for(theme.head.apple_touch_icon) %>">
+    <% } %>
 
     <meta name="format-detection" content="telephone=no"/>
     <meta name="description" itemprop="description" content="<% if(page.description) { %><%= page.description %><% } else if(page.excerpt){ %><%= strip_html(page.excerpt).replace(/^s*/, '').replace(/s*$/, '') %><% } else if (config.description){ %><%= config.description %><% } %>">
     <meta name="keywords" content="<%= theme.head.keywords %><% if(page.tags && page.tags.each) { page.tags.each(function(tag) { %><%- ',' + tag.name %><% })} %>">
     <meta name="theme-color" content="<%= theme.head.android_chrome_color %>">
 
-    <!-- WebAPP Icons -->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="<%= config.title %>">
     <meta name="msapplication-starturl" content="<%= config.url + url_for(page.path).replace('index.html', '') %>">
@@ -43,7 +47,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="<%= config.title %>">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-icon" href="<%= url_for(theme.head.apple_touch_icon) %>">
 
     <!-- RSS -->
     <% if(theme.url.rss) { %>
