--- a/layout/_partial/sidebar.ejs
+++ b/layout/_partial/sidebar.ejs
@@ -1,6 +1,6 @@
 <div class="mdui-drawer" id="left-drawer">
     <ul class="mdui-list" mdui-collapse="{accordion: true}">
-    <li class="mdui-list-item mdui-ripple">
+    <li class="mdui-list-item mdui-ripple" onclick="location.href='<%= theme.url.sidebar_avatar %>'">
         <% if(theme.img.avatar) {%>
             <div class="mdui-list-item-avatar"><img class="<% if(theme.style.m_avatar === true) { %>m-avatar<% } %>" src="<%= theme.img.avatar %>"></div>
         <% } else { %>
