--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,7 +1,7 @@
 <div class="mdui-card mdui-m-b-5 mdui-shadow-<%= theme.mdui.shadow %> <% if(theme.mdui.hoverable === true) { %>mdui-hoverable<% } %>">
     <%- partial('_partial/post/primary', {post: page}) %>
     <%- partial('_partial/post/actions', {post: page}) %>
-    <div class="mdui-card-content mdui-typo">
+    <div class="mdui-card-content mdui-typo m-content">
         <%- page.content %>
     </div>
 </div>
