--- a/source/css/_partial/content.styl
+++ b/source/css/_partial/content.styl
@@ -3,6 +3,7 @@
         position: relative
         padding-bottom: 56.25%
         height: 0
+        margin: 0 0 1.2em 0
         overflow: hidden
         iframe,
         object,
