feat: scroll-behavior & totop

--- a/layout/_widget/toc.ejs
+++ b/layout/_widget/toc.ejs
@@ -5,11 +5,7 @@
         <i class="mdui-collapse-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
     </div>
     <ul class="mdui-collapse-item-body mdui-typo">
-        <% if (theme.sidebar.toc.list_number === true) { %>
-            <%- toc(page.content, {class: 'm-toc', list_number: true}) %>
-        <% } else { %>
-            <%- toc(page.content, {class: 'm-toc', list_number: false}) %>
-        <% } %>
+        <%- toc(page.content, {class: 'm-toc', list_number: theme.sidebar.toc.list_number}) %>
     </ul>
 </li>
 <% if(theme.sidebar.toc.divider === true) { %>
