--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -5,7 +5,7 @@
         <%- partial('_partial/appbar') %>
         <%- partial('_partial/sidebar') %>
         <main class="<% if(theme.style.m_container === true) { %>m-container <% } %>mdui-container mdui-p-x-0">
-            <div class="mdui-row mdui-center" style="max-width: 840px">
+            <div class="mdui-row mdui-center" style="max-width: 840px" id="top">
                 <%- body %>
             </div>
         </main>
