--- a/layout/_widget/fab.ejs
+++ b/layout/_widget/fab.ejs
@@ -1,5 +1,5 @@
 <div class="mdui-fab-wrapper" mdui-headroom="{initialClass: 'mdui-fab-wrapper', pinnedClass:'mdui-fab-show', unpinnedClass: 'mdui-fab-hide',}" mdui-fab="{trigger: 'hover'}" id="fab">
-    <button class="mdui-fab mdui-ripple mdui-color-theme-accent">
+    <button class="mdui-fab mdui-ripple mdui-color-theme-accent" onclick="location.href='#top'">
     <i class="mdui-icon material-icons">fingerprint</i>      
     <i class="mdui-icon mdui-fab-opened material-icons">done</i>
     </button>
