--- a/layout/_partial/appbar.ejs
+++ b/layout/_partial/appbar.ejs
@@ -9,7 +9,7 @@
         <a class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></a>
     </div>
 </div>
-    <% if(!is_home() && !is_archive()) { %>
+<% if(!is_home() && !is_archive()) { %>
     <div class="mdui-appbar mdui-shadow-0 mdui-appbar-fixed" mdui-headroom="{pinnedClass: 'm-unpinned', unpinnedClass: 'm-pinned'}" style="visibility: hidden; transition: background-color .3s;">
         <div class="mdui-toolbar m-toolbar-second" style="transition: all 0.5s linear;">
             <button class="mdui-btn mdui-btn-icon" onclick="window.location.href='<%= config.url %>'"><i class="mdui-icon material-icons">close</i></button>
@@ -18,8 +18,7 @@
             <% if(theme.appbar.min2read === true) { %>
                 <a class="mdui-btn mdui-hidden-sm-down"><i class="mdui-icon mdui-icon-left material-icons">access_time</i><%= __('appbar.time') %> <%= min2read(page.content) %> <%= __('appbar.time_minutes') %></a>
             <% } %>
-            <!-- <a class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">forum</i></a>
-            <a class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">format_list_numbered</i></a> -->
+            <!-- <a class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">forum</i></a>-->
         </div>
-        </div>
-    <% } %>
+    </div>
+<% } %>
